tests/ui/higher-ranked/trait-bounds/rigid-equate-projections-in-higher-ranked-fn-signature.next.stderr
error[E0284]: type annotations needed: cannot normalize `<_ as Trait<'a>>::Assoc`
  --> $DIR/rigid-equate-projections-in-higher-ranked-fn-signature.rs:27:12
   |
LL |     let _: for<'a> fn(<_ as Trait<'a>>::Assoc) = foo::<T>();
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot normalize `<_ as Trait<'a>>::Assoc`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
